# CyberClone

./: .gitignore  LICENSE  README.md  app.py  config.py  process_chat_data.py  pyproject.toml
html/: index.html  script.js  style.css
memory/: __init__.py  chat_memory.py  short_term.py
prompts/: README.md  __init__.py  chat_processor.py  config_generator.py  data_cleaner.py  prompt_generator.py  prompts_template.py  template.json  wukong_config.json
