[tool.poetry]
name = "cyberclone"
version = "0.1.0"
description = ""
authors = ["fbw <844255371@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.3.1"
langchain-community = "0.3.1"
fastapi = "0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
ollama = "0.4.8"
black = "^25.1.0"
chainlit = "^2.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
